--- a/config.toml
+++ b/config.toml
@@ -57,8 +57,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     weight = 1
 
 [[menu.main]]
-    name = "Projects"
-    url = "/project/"
+    name = "Tutorials"
+    url = "/tutorials/"
     weight = 2
 
 [[menu.main]]
