--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ copyright = "George Self"
 disqusShortname = "XXX"
 googleAnalytics = "XXX"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+mathjax = true
 
 [Privacy]
 
