--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-.Rproj.user
+# History files
 .Rhistory
-.RData
-.Ruserdata
+.Rapp.history
+
+# Example code in package build process
+*-Ex.R
+
+# RStudio files
+.Rproj.user/
+.Rproj.user
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# ignore JSON files
+*.json
